<resources>
    <string name="app_name">DriveEase</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_upp">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="if_you_are_a_new_user">If you are a new user?</string>
    <string name="pothole_preview">Pothole preview</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="update">Update</string>
    <string name="describe_the_pothole">Describe the pothole</string>
    <string name="severity_level">Severity Level</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">OR</string>
    <string name="sign_in_with_googlee">Sign in with Google</string>
    <string name="default_web_client_id">YOUR_CLIENT_ID</string>
    <string name="send_otp" />
    <string name="sign_in_with_phone">Sign in with Phone</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="my_map_api_key">AIzaSyBFB-f15GLir-GZ67PfwDHx1fZw3W1Ep8Q</string>
    <string name="submit_report">Submit Report</string>
    <string name="review" />
    <string name="review_">Review</string>
    <string name="submit">SUBMIT</string>
    <string name="report_image">Report image</string>
    <string name="sign_up_admin">Sign Up</string>
    <string name="new_admin">New Admin?</string>
    <string name="admin_password">Admin Password</string>
    <string name="sign_in_admin">Sign In</string>
    <string name="sign_in_with_google_admin">Sign in with Google</string>
    <string name="OR">OR</string>
    <string name="admin_email">Admin Email</string>
    <string name="welcome_admin">Welcome</string>
    <string name="welcome_admin_sign_up">Welcome</string>
    <string name="sign_up_to_continue_admin">Sign Up to Continue</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up_admin__">Sign Up</string>
    <string name="pothole_management">Pothole Management</string>
    <string name="total_officers">Total Officers</string>
    <string name="_0">0</string>
    <string name="total_reports">Total Reports</string>
    <string name="_0_">0</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="_0__">0</string>
    <string name="total_workers">Total Workers</string>
    <string name="pothole_resolution_monitoring">Pothole Resolution Monitoring</string>
    <string name="go_to_compose">Go to Compose</string>
    <string-array name="roles_array">
        <item>Officer</item>
        <item>Sub-divisional Officer (SDO)</item>
        <item>Worker</item>
    </string-array>
    <string name="title_activity_officer_compose">OfficerComposeActivity</string>
    <string name="drive_ease">DRIVE EASE</string>
    <string name="hi_there">Hi There!</string>
    <string name="welcome_to_drive_ease_community_dashboard">Welcome to drive ease. Community Dashboard</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="orr">or</string>
    <string name="your_email">Your email</string>
    <string name="drive_ease_">DRIVE EASE</string>
    <string name="hi_there_">Hi there!</string>
    <string name="welcome_to_drive_ease_community_dashboard_">Welcome to Drive Ease. Community Dashboard</string>
    <string name="your_email_newui">Your email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_newui">Sign up</string>
    <string name="__">|</string>
    <string name="admin_login">Admin Login</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="location">Location....</string>
    <string name="open_camera">Open camera</string>
    <string name="location_not_available" />
    <string name="enter_password">Enter password</string>

</resources>